# organic-bandgap-mls

./: .gitignore  README.md  create_dataset.ipynb  pyproject.toml
GNN/: GNN.ipynb
ansanble/: ansanble.ipynb
descripter/: .gitignore  descripter.ipynb
morgan_feature_enginnering/: morgan_feature_edit.ipynb
morgan_feature_enginnering/results/: morgan_importance.csv
