[project]
name = "organic-for-git"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepchem>=2.8.0",
    "ipykernel>=7.3.0",
    "lightgbm>=4.6.0",
    "matplotlib>=3.11.0",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "rdkit>=2026.3.3",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "torch>=2.13.0",
    "torch-geometric>=2.8.0",
]
